20020510
 - (djm) Rework RedHat RPM files. Based on spec from Nalin 
   Dahyabhai <nalin@redhat.com> and patches from 
   Pekka Savola <pekkas@netcore.fi>

20020509
 - (tim) [Makefile.in] Unbreak make -f Makefile.in distprep

20020508
 - (tim) [openbsd-compat/bsd-arc4random.c] fix logic on when seed_rng() is
   called. Report by Chris Maxwell <maxwell@cs.dal.ca>
 - (tim) [Makefile.in configure.ac] set SHELL variable in Makefile
 - (djm) Disable PAM kbd-int auth if privsep is turned on (it doesn't work)

20020507
 - (tim) [configure.ac openbsd-compat/bsd-misc.c openbsd-compat/bsd-misc.h]
   Add truncate() emulation to address Bug 208

20020506
 - (djm) Unbreak auth-passwd.c for PAM and SIA
 - (djm) Unbreak PAM auth for protocol 1. Report from Pekka Savola 
   <pekkas@netcore.fi>
 - (djm) Don't reinitialise PAM credentials before we have started PAM.
   Report from Pekka Savola <pekkas@netcore.fi>
   
20020506
 - (bal) Fixed auth-passwd.c to resolve PermitEmptyPassword issue
 
20020501
 - (djm) Import OpenBSD regression tests. Requires BSD make to run
 - (djm) Fix readpassphase compilation for systems which have it

20020429
 - (tim) [contrib/caldera/openssh.spec] update fixUP to reflect changes in
   sshd_config.
 - (tim) [contrib/cygwin/README] remove reference to regex.
   patch from Corinna Vinschen <vinschen@redhat.com>

20020426
 - (djm) Bug #137, #209: fix make problems for scard/Ssh.bin, do uudecode
   during distprep only
 - (djm) Disable PAM password expiry until a complete fix for bug #188 exists
 - (djm) Bug #180: Set ToS bits on IPv4-in-IPv6 mapped addresses. Based on 
   patch from openssh@misc.tecq.org

20020425
 - (stevesk) [defines.h] remove USE_TIMEVAL; unused
 - (stevesk) [acconfig.h auth-passwd.c configure.ac sshd.c] HP-UX 10.26
   support.  bug #184.  most from dcole@keysoftsys.com.

20020424
 - (djm) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2002/04/23 12:54:10
     [version.h]
     3.2.1
   - djm@cvs.openbsd.org 2002/04/23 22:16:29